[gd_scene load_steps=3 format=3 uid="uid://bl8lmuhqi2nk8"]

[ext_resource type="Script" path="res://card/Hand.gd" id="1_n3dqi"]
[ext_resource type="Resource" uid="uid://bheoeso164iy5" path="res://card/base_deck.tres" id="2_m472q"]

[node name="Hand" type="Node3D"]
script = ExtResource("1_n3dqi")
deck = ExtResource("2_m472q")

[node name="CardPos0" type="Marker3D" parent="."]
transform = Transform3D(0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, -0.24, -0.025, -0.003)
gizmo_extents = 0.04

[node name="CardPos1" type="Marker3D" parent="."]
transform = Transform3D(0.990268, -0.139173, 0, 0.139173, 0.990268, 0, 0, 0, 1, -0.16, -0.012, -0.002)
gizmo_extents = 0.04

[node name="CardPos2" type="Marker3D" parent="."]
transform = Transform3D(0.997564, -0.0697565, 0, 0.0697565, 0.997564, 0, 0, 0, 1, -0.08, -0.003, -0.001)
gizmo_extents = 0.04

[node name="CardPos3" type="Marker3D" parent="."]
gizmo_extents = 0.04

[node name="CardPos4" type="Marker3D" parent="."]
transform = Transform3D(0.997564, 0.0697565, 0, -0.0697565, 0.997564, 0, 0, 0, 1, 0.08, -0.003, 0.001)
gizmo_extents = 0.04

[node name="CardPos5" type="Marker3D" parent="."]
transform = Transform3D(0.990268, 0.139173, 0, -0.139173, 0.990268, 0, 0, 0, 1, 0.16, -0.012, 0.002)
gizmo_extents = 0.04

[node name="CardPos6" type="Marker3D" parent="."]
transform = Transform3D(0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0, 1, 0.24, -0.025, 0.003)
gizmo_extents = 0.04

[node name="SpawnPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.707107, -0.707107, 0, 0.707107, -0.707107, 0.3, 0, -0.2)
gizmo_extents = 0.04

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.35)
near = 0.01
far = 200.0
